--- a/docs/release-notes/release-2023-04-11.md
+++ b/docs/release-notes/release-2023-04-11.md
@@ -59,9 +59,7 @@ op list(@collectionFormat("multi") @query select: string[]): Pet[];
 
 // Now
 op list(
-  @query({
-    format: "multi",
-  })
+  @query(#{ explode: true })
   select: string[],
 ): Pet[];
 ```
