--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -2308,7 +2308,9 @@ TODO;
 <TabItem value="java" label="Java" >
 
 ```java
-TODO
+// Internal implementation
+jsonWriter.writeStringField("prop",
+    this.value == null ? null : DateTimeFormatter.ISO_OFFSET_DATE_TIME.format(this.value));
 ```
 
 </TabItem>
