--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -51,3 +51,9 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
 - [`@protocolAPI`](./decorators.md#@Azure.ClientGenerator.Core.protocolAPI)
 - [`@usage`](./decorators.md#@Azure.ClientGenerator.Core.usage)
+
+## Azure.ClientGenerator.Core.CSharp
+
+### Decorators
+
+- [`@hasJSONConverter`](./decorators.md#@Azure.ClientGenerator.Core.CSharp.hasJSONConverter)
