rename to hasJsonConverter

--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -56,4 +56,4 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 
 ### Decorators
 
-- [`@hasJSONConverter`](./decorators.md#@Azure.ClientGenerator.Core.CSharp.hasJSONConverter)
+- [`@hasJsonConverter`](./decorators.md#@Azure.ClientGenerator.Core.CSharp.hasJsonConverter)
