--- a/.chronus/changes/json-converter-2024-6-24-16-48-41.md
+++ b/.chronus/changes/json-converter-2024-6-24-16-48-41.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-Add `@hasJSONConverter` for csharp only to indicate if JSON converter is needed
+Add `@hasJsonConverter` for csharp only to indicate if JSON converter is needed
