--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -48,7 +48,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
 - [`@include`](./decorators.md#@Azure.ClientGenerator.Core.include)
 - [`@internal`](./decorators.md#@Azure.ClientGenerator.Core.internal)
+- [`@methodSignature`](./decorators.md#@Azure.ClientGenerator.Core.methodSignature)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
-- [`@overrideClientMethod`](./decorators.md#@Azure.ClientGenerator.Core.overrideClientMethod)
 - [`@protocolAPI`](./decorators.md#@Azure.ClientGenerator.Core.protocolAPI)
 - [`@usage`](./decorators.md#@Azure.ClientGenerator.Core.usage)
