Update docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
Co-authored-by: Srikanta <51379715+srnagar@users.noreply.github.com>

--- a/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
@@ -964,7 +964,7 @@ func (client *Client) ScheduleRepairs(ctx context.Context, widgetName string, pr
 If you want to keep the model, you have two options to prevent spreading:
 
 1. `@override`
-2. If you don't want to do client customizations, you could use a wrapper to explicit set the body to prevent spread.
+2. If you don't want to do client customizations, you could use a wrapper to explicitly set the body to prevent spread.
 
 <Tabs>
 
