use generic wording

--- a/docs/howtos/Client Generation/04renaming.mdx
+++ b/docs/howtos/Client Generation/04renaming.mdx
@@ -3,7 +3,7 @@ import TabItem from "@theme/TabItem";
 
 # Client renaming
 
-This page documents how to customize names for client generations in DPG. For an overview of the setup, please visit the setup page.
+This page documents how to customize names for client generation. For an overview of the setup, please visit the setup page.
 
 :::note
 The TypeSpec compiler provides an `@encodedName` decorator that allows changing the name of the property for a given serialization format.
@@ -114,7 +114,7 @@ Renames in the context of models can be done on the model name and the attribute
 
 Language target takes priority over `client` target.
 
-> **NOTE:** As model name do not get serialized as JSON, sometimes the best choice is to rename the main TYPESPEC for clarity. Talk to your DPG contact is you're unsure
+> **NOTE:** As model name do not get serialized as JSON, sometimes the best choice is to rename the main TYPESPEC for clarity. Talk to your emitter contact is you're unsure
 > if you should rename the model in the main TYPESPEC or customize it.
 
 <Tabs>
