--- a/docs/howtos/Client Generation/02client.mdx
+++ b/docs/howtos/Client Generation/02client.mdx
@@ -3,7 +3,7 @@ import TabItem from "@theme/TabItem";
 
 # Client hierarchy
 
-This page documents the default client hierarchy behavior as well as how to customize clients in DPG. For an overview of the setup, please visit the previous page.
+This page documents the default client hierarchy behavior as well as how to customize clients. For an overview of the setup, please visit the previous page.
 
 JS RLC is not in the business of customization. it will ignore client.tsp and the follow scenarios will not have impact on the JS RLC user experiences. In this context, TypeScript part means JS DPG.
 
@@ -288,7 +288,7 @@ For this section, we will assume that you have service called `PetStore` in the 
 
 ### Renaming the single client
 
-This can be achieved with the augment operator and the DPG package
+This can be achieved with the augment operator and the emitter package
 
 <Tabs>
 <TabItem value="typespec" label="TypeSpec" default>
