--- a/docs/howtos/Client Generation/03convenient.mdx
+++ b/docs/howtos/Client Generation/03convenient.mdx
@@ -3,7 +3,7 @@ import TabItem from "@theme/TabItem";
 
 # Convenient method generation
 
-This page documents how to customize method generations in DPG. For an overview of the setup, please visit the setup page.
+This page documents how to customize method generation for the emitters. For an overview of the setup, please visit the setup page.
 
 ## Default behaviors
 
@@ -114,7 +114,7 @@ For fine tuning, the set of decorators `@protocolAPI` and `@convenientAPI` can b
 
 ### Shifting the generation of protocol and convenience on and off
 
-This can be achieved with the augment operator and the DPG package
+This can be achieved with the augment operator and the emitter package
 
 <Tabs>
 <TabItem value="typespec" label="TypeSpec" default>
