--- a/docs/howtos/Client Generation/05union.mdx
+++ b/docs/howtos/Client Generation/05union.mdx
@@ -3,7 +3,7 @@ import TabItem from "@theme/TabItem";
 
 # One path for multiple input/output
 
-This page documents DPG behavior and customization when you use union operator `|` or `@sharedRoute` to express multiple input/output for a given path.
+This page documents emitter behavior and customization when you use union operator `|` or `@sharedRoute` to express multiple input/output for a given path.
 
 ## Default behaviors
 
