--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -46,15 +46,10 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@convenientAPI`](./decorators.md#@Azure.ClientGenerator.Core.convenientAPI)
 - [`@exclude`](./decorators.md#@Azure.ClientGenerator.Core.exclude)
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
+- [`@hasJsonConverter`](./decorators.md#@Azure.ClientGenerator.Core.hasJsonConverter)
 - [`@include`](./decorators.md#@Azure.ClientGenerator.Core.include)
 - [`@internal`](./decorators.md#@Azure.ClientGenerator.Core.internal)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
 - [`@override`](./decorators.md#@Azure.ClientGenerator.Core.override)
 - [`@protocolAPI`](./decorators.md#@Azure.ClientGenerator.Core.protocolAPI)
 - [`@usage`](./decorators.md#@Azure.ClientGenerator.Core.usage)
-
-## Azure.ClientGenerator.Core.CSharp
-
-### Decorators
-
-- [`@hasJsonConverter`](./decorators.md#@Azure.ClientGenerator.Core.CSharp.hasJsonConverter)
