Add `@useSystemTextJsonConverter` decorator for csharp (#1336)
Resolves https://github.com/Azure/typespec-azure/issues/1229
This change has already been approved in
https://github.com/Azure/typespec-azure/pull/1230

--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -52,3 +52,4 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@override`](./decorators.md#@Azure.ClientGenerator.Core.override)
 - [`@protocolAPI`](./decorators.md#@Azure.ClientGenerator.Core.protocolAPI)
 - [`@usage`](./decorators.md#@Azure.ClientGenerator.Core.usage)
+- [`@useSystemTextJsonConverter`](./decorators.md#@Azure.ClientGenerator.Core.useSystemTextJsonConverter)
