update js emitter wording

--- a/docs/howtos/Client Generation/02client.mdx
+++ b/docs/howtos/Client Generation/02client.mdx
@@ -5,7 +5,7 @@ import TabItem from "@theme/TabItem";
 
 This page documents the default client hierarchy behavior as well as how to customize clients. For an overview of the setup, please visit the previous page.
 
-JS RLC is not in the business of customization. it will ignore client.tsp and the follow scenarios will not have impact on the JS RLC user experiences. In this context, TypeScript part means JS DPG.
+JS RLC is not in the business of customization. it will ignore client.tsp and the follow scenarios will not have impact on the JS RLC user experiences. In this context, TypeScript part means JS convenience emitter.
 
 ## Default behavior
 
