--- a/docs/howtos/DataPlane Generation - DPG/07tcgcTypes.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/07tcgcTypes.mdx
@@ -891,7 +891,10 @@ export interface SdkHttpOperation {
   kind: "http";
   // raw HTTP operation output from typespec/http
   __raw: HttpOperation;
+  // route path for the target operation. TypeSpec suggest to use `uriTemplate` instead as `path` will not work for complex cases like not-escaping reserved chars.
   path: string;
+  // the fully resolved URI template for the target operation as defined by [RFC 6570](https://datatracker.ietf.org/doc/html/rfc6570).
+  uriTemplate: string;
   verb: HttpVerb;
   parameters: (SdkPathParameter | SdkQueryParameter | SdkHeaderParameter)[];
   bodyParam: SdkBodyParameter;
@@ -911,6 +914,7 @@ const sdkHttpOperation = {
     // raw HttpOperation from @typespec/http;
   },
   path: "/widgets",
+  uriTemplate: "/widgets",
   verb: "get",
   parameters: [
     {
@@ -1040,13 +1044,16 @@ Currently we only support HTTP service parameters.
 This represents an HTTP query parameter.
 
 ```ts
-export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes";
+export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes" | "simple" | "form";
 
 export interface SdkQueryParameter extends SdkModelPropertyTypeBase {
   kind: "query";
+  // the collection format to use to separate each value in array of a query parameter
   collectionFormat?: CollectionFormat;
   serializedName: string;
   correspondingMethodParams: SdkModelPropertyType[];
+  // if true, send each value in array or object as a separate query parameter
+  explode?: boolean;
 }
 ```
 
@@ -1055,7 +1062,7 @@ export interface SdkQueryParameter extends SdkModelPropertyTypeBase {
 This is an HTTP header parameter.
 
 ```ts
-export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes";
+export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes" | "simple" | "form";
 
 export interface SdkHeaderParameter extends SdkModelPropertyTypeBase {
   kind: "header";
@@ -1070,7 +1077,17 @@ export interface SdkHeaderParameter extends SdkModelPropertyTypeBase {
 ```ts
 export interface SdkPathParameter extends SdkModelPropertyTypeBase {
   kind: "path";
-  urlEncode: boolean;
+  // when interpolating this parameter in the case of array or object, expand each value using the given style
+  explode?: boolean;
+  // different interpolating styles for the path parameter
+  // - simple: no separator
+  // - label: . as separator
+  // - matrix: ; as separator
+  // - fragment: # as separator
+  // - path: / as separator
+  style?: "simple" | "label" | "matrix" | "fragment" | "path";
+  // when interpolating this parameter, do not encode reserved characters
+  allowReserved?: boolean;
   serializedName: string;
   optional: false;
   correspondingMethodParams: SdkModelPropertyType[];
