docs, DPG how-to, java on encode string

--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -2372,7 +2372,8 @@ TODO;
 <TabItem value="java" label="Java" >
 
 ```java
-TODO
+// Internal implementation
+jsonWriter.writeStringField("prop", Objects.toString(this.value, null));
 ```
 
 </TabItem>
