--- a/docs/howtos/DataPlane Generation - DPG/07tcgcTypes.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/07tcgcTypes.mdx
@@ -1044,6 +1044,14 @@ Currently we only support HTTP service parameters.
 This represents an HTTP query parameter.
 
 ```ts
+// different collection format to use to separate each value in array
+// - multi: no separator, treat each value in array as a separate query parameter
+// - csv: , as separator
+// - ssv: space as separator
+// - tsv: tab as separator
+// - pipes: | as separator
+// - simple: , as separator
+// - form: no separator, treat each value in array as a separate query parameter
 export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes" | "simple" | "form";
 
 export interface SdkQueryParameter extends SdkModelPropertyTypeBase {
@@ -1052,8 +1060,8 @@ export interface SdkQueryParameter extends SdkModelPropertyTypeBase {
   collectionFormat?: CollectionFormat;
   serializedName: string;
   correspondingMethodParams: SdkModelPropertyType[];
-  // if true, send each value in array or object as a separate query parameter
-  explode?: boolean;
+  // if true, send each value in array or object as a separate query parameter, default is `false`
+  explode: boolean;
 }
 ```
 
@@ -1062,6 +1070,14 @@ export interface SdkQueryParameter extends SdkModelPropertyTypeBase {
 This is an HTTP header parameter.
 
 ```ts
+// different collection format to use to separate each value in array
+// - multi: no separator, treat each value in array as a separate header parameter
+// - csv: , as separator
+// - ssv: space as separator
+// - tsv: tab as separator
+// - pipes: | as separator
+// - simple: , as separator
+// - form: no separator, treat each value in array as a separate header parameter
 export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes" | "simple" | "form";
 
 export interface SdkHeaderParameter extends SdkModelPropertyTypeBase {
@@ -1077,17 +1093,17 @@ export interface SdkHeaderParameter extends SdkModelPropertyTypeBase {
 ```ts
 export interface SdkPathParameter extends SdkModelPropertyTypeBase {
   kind: "path";
-  // when interpolating this parameter in the case of array or object, expand each value using the given style
-  explode?: boolean;
-  // different interpolating styles for the path parameter
+  // when interpolating this parameter in the case of array or object, expand each value using the given style, default is `false`
+  explode: boolean;
+  // different interpolating styles for the path parameter, default is `"simple"`
   // - simple: no separator
   // - label: . as separator
   // - matrix: ; as separator
   // - fragment: # as separator
   // - path: / as separator
-  style?: "simple" | "label" | "matrix" | "fragment" | "path";
-  // when interpolating this parameter, do not encode reserved characters
-  allowReserved?: boolean;
+  style: "simple" | "label" | "matrix" | "fragment" | "path";
+  // when interpolating this parameter, do not encode reserved characters, default is `false`
+  allowReserved: boolean;
   serializedName: string;
   optional: false;
   correspondingMethodParams: SdkModelPropertyType[];
